<resources>
    <string name="app_name">\@ChiangMai</string>
    <string name="btn_feed">Feed</string>
    <string name="btn_otop">Otop</string>
    <string name="btn_hotel">Hotel</string>
    <string name="btn_food">Food</string>
    <string name="btn_exchange">Exchange</string>
    <string name="btn_hospital">Hospital</string>
    <string name="btn_police">Police</string>
    <string name="btn_more">More</string>
    <string name="txt_best_things">Best Things to do in Chiang mai</string>
    <string name="otop_btn"><b>OTOP</b></string>
    <string name="food_otop"><b>Food</b></string>
    <string name="drink_otop"><b>Drink</b></string>
    <string name="shirt_otop"><b>Shirt</b></string>
    <string name="accessories_otop"><b>Accessory</b></string>
    <string name="back_ic">Back</string>
    <string name="otop_cart_ic">OTOP Cart</string>
    <string name="imgitemotop">imgItemOtop</string>
    <string name="text_otop"><b>OTOP</b></string>
    <string name="item_img">item_img</string>
    <string name="categoryotopicon">CategoryOTOPIcon</string>
    <string name="categorytext">categoryText</string>
    <string name="txt_hotel_destiantion">Destiantion</string>
    <string name="txt_hotel_checkin">Check in - Check out</string>
    <string name="txt_hotel_guest">Guest</string>
    <string name="txt_hotel_room">Room</string>
    <string name="txt_hotel_filter">Filter</string>
    <string name="txt_hotel_editor">Editeor \'s Pick of Chiang Mai favourite hotels  </string>
    <string name="txt_hotel_search">Search</string>
    <!--  Hospital String  -->
    <string name="txt_hospital">Hospital</string>
    <string name="txt_hospital_name"><b>Hospital name</b></string>
    <string name="txt_hospital_address_title"><b>Address: </b></string>
    <string name="txt_hospital_tel_title"><b>Telephone: </b></string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="telephone">Telephone</string>
    <string name="hospitaldetailimg">HospitalDetailIMG</string>
    <string name="hos_detail_name">Hospital Name</string>
    <string name="title_activity_police">PoliceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!--  Police Department String  -->
    <string name="txt_police_title"><b>Police Station</b></string>
    <string name="txt_police_name"><b>Police department name</b></string>
    <string name="txt_police_address"><b>Address: </b></string>
    <string name="txt_police_tel"><b>Telephone: </b></string>
    <string name="txt_police_address_detail">Address detail</string>
    <string name="txt_police_tel_detail"><b>Tel. detail</b></string>
    <string name="backtxt">Back</string>

    <!--  Hotel String  -->
    <string name="txt_hotel_title">Hotel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_get_data_otop">testGetData_otop</string>

</resources>